Json como property

--- a/src/main/resources/values.properties
+++ b/src/main/resources/values.properties
@@ -1,5 +1,7 @@
 config.username = rocio
 config.listOfValues = pera,manzana, mermelada, zumo
-config.message = hola que tal estas
+config.message = hola que tal estas á é ? ó probando caracteres especiales
 config.code= 223344
 config.telefono = 655447788
+config.listaValores = Uno,dos,tres, cuatro
+config.valuesMap = { product: 'Dell i7' , description: 'elegant and light computer' , price: '1000' }
